# moodle-plugin

./: .env.example  .env.moodle.example  .gitignore  404.html  Cargo.toml  compose.yaml  deploy-ai-moodle.sh  index.html  index.yaml  mkdocs.yml  otel-collector-config.yaml  package.json  prometheus-local.yml  service-metrics.yaml  start-otel-collector.sh  test-local-prometheus.sh  workflow.drawio
.docker/moodle/: post-init.sh
.docker/moodle-nginx/: Dockerfile  config.php.template
.github/: FUNDING.yml
.github/workflows/: aiprovider-release.yml  auto-assign.yml  ci.yml  deploy-docs.yml  lint-codebase.yml  theme-ci.yml  theme-release.yml
.roo/: mcp.example.json
charts/moodle/: Chart.yaml  README.md  values-cnpg.yaml  values-mariadb.yaml  values-postgres.yaml  values.yaml
charts/moodle-operator/: Chart.yaml  README.md  values.yaml
cnpg/: README.md  install-operator.sh  postgres-cluster.yaml
concepts/01-architecture/: index.html
docs/guides/: 06-adorsys-theme_v1.md  06-migration.md  06-moodle-v4-to-v5-backup-data  07-moodle-v4-to-v5-backup-data.md  07-plugin-release.md
features/: index.html
guides/01-moodle-operation/: index.html
guides/02-local-moodle-with-docker/: index.html
guides/03-online-moodle-with-k8s/: index.html
guides/04-k8s-operator-model/: index.html
guides/05-moodle-optimisations-with-rust/: index.html
overview/: index.html
plugins/adorsys_theme_v1/: README.md  config.php  lib.php  package-lock.json  package.json  settings.php  tailwind.config.js  webpack.config.js  (+1 more)
plugins/local/ai_openai_v1/rust_processor/: Cargo.toml
plugins/local/ai_openai_v1/rust_processor/src/: main.rs
search/: search_index.json
what-is-moodle/: index.html
(+307 files in other folders)
