[workspace]
members = [
    "packages/moodle-wasm-example",
    "packages/operator",
    "packages/ai-package/utils",
    "packages/ai-package/ai-core",
    "packages/ai-package/ipc-handler",
    "packages/ai-package/model-serving",
]

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
