[workspace]
members = [
    "packages/moodle-wasm-example",
    "packages/operator",
]

resolver = "3"

[workspace.dependencies]
wasm-bindgen = { version = "0" }
kube = { version = "1", features = ["runtime", "derive", "admission", "rustls-tls", "ws", "socks5", "runtime"] }
kube-runtime = "1"
kube-derive = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
thiserror = "2"
tracing = "0"
k8s-openapi = { version = "0", features = ["latest", "schemars"] }
schemars = { version = "0" }
features = "0"
tracing-subscriber = "0"
futures = "0"
anyhow = "1"
mimalloc = "0"

[workspace.package]
edition = "2024"
version = "1.0.0"

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
