[package]
name = "moodle_ai_processor_openai_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.16.1" # The OpenAI crate
# This crate allows easy reading of environment variables
dotenvy = "0.15.7"